--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -338,7 +338,45 @@ net.ipv6.icmp.echo_ignore_anycast = 1
 
 # Sysctl netfilter options
 # Location:/Documentation/networking/nf_conntrack-sysctl.rst
+net.netfilter.nf_conntrack_buckets = 2097152
 net.netfilter.nf_conntrack_events = 0
+net.netfilter.nf_conntrack_frag6_timeout = 10
+net.netfilter.nf_conntrack_generic_timeout = 10
+net.netfilter.nf_conntrack_icmp_timeout = 1
+net.netfilter.nf_conntrack_icmpv6_timeout = 1
+net.netfilter.nf_conntrack_max = 250
 net.netfilter.nf_conntrack_dccp_loose = 0
 net.netfilter.nf_conntrack_tcp_ignore_invalid_rst = 1
 net.netfilter.nf_conntrack_tcp_loose = 0
+net.netfilter.nf_conntrack_tcp_max_retrans = 3
+net.netfilter.nf_conntrack_tcp_timeout_close = 1
+net.netfilter.nf_conntrack_tcp_timeout_close_wait = 1
+net.netfilter.nf_conntrack_tcp_timeout_established = 300
+net.netfilter.nf_conntrack_tcp_timeout_fin_wait = 5
+net.netfilter.nf_conntrack_tcp_timeout_last_ack = 10
+net.netfilter.nf_conntrack_tcp_timeout_max_retrans = 10
+net.netfilter.nf_conntrack_tcp_timeout_syn_recv = 10
+net.netfilter.nf_conntrack_tcp_timeout_syn_sent = 10
+net.netfilter.nf_conntrack_tcp_timeout_time_wait = 10
+net.netfilter.nf_conntrack_tcp_timeout_unacknowledged = 10
+net.netfilter.nf_conntrack_sctp_timeout_closed = 1
+net.netfilter.nf_conntrack_sctp_timeout_cookie_wait = 3
+net.netfilter.nf_conntrack_sctp_timeout_cookie_echoed = 3
+net.netfilter.nf_conntrack_sctp_timeout_established = 10
+net.netfilter.nf_conntrack_sctp_timeout_shutdown_sent = 1
+net.netfilter.nf_conntrack_sctp_timeout_shutdown_recd = 1
+net.netfilter.nf_conntrack_sctp_timeout_shutdown_ack_sent = 3
+net.netfilter.nf_conntrack_sctp_timeout_heartbeat_sent = 10
+net.netfilter.nf_conntrack_udp_timeout = 10
+net.netfilter.nf_conntrack_udp_timeout_stream = 10
+net.netfilter.nf_conntrack_gre_timeout = 10
+net.netfilter.nf_conntrack_gre_timeout_stream = 10
+net.netfilter.nf_flowtable_tcp_timeout = 10
+net.netfilter.nf_flowtable_udp_timeout = 10
+net.netfilter.nf_conntrack_dccp_timeout_closereq = 10
+net.netfilter.nf_conntrack_dccp_timeout_closing = 10
+net.netfilter.nf_conntrack_dccp_timeout_open = 10
+net.netfilter.nf_conntrack_dccp_timeout_partopen = 10
+net.netfilter.nf_conntrack_dccp_timeout_request = 10
+net.netfilter.nf_conntrack_dccp_timeout_respond = 10
+net.netfilter.nf_conntrack_dccp_timeout_timewait = 10
