--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -5,7 +5,7 @@
 table netdev filter {
 	chain ingress {
 		type filter hook ingress device "NETDEVICE" priority -2147483648; policy drop;
-		arp htype 1 arp operation reply arp saddr ether xx:xx:xx:xx:xx:xx arp saddr ip x.x.x.x accept
+		arp saddr ether xx:xx:xx:xx:xx:xx arp saddr ip x.x.x.x accept
 		ip frag-off & 8191 != 0 drop
 #		tcp flags != syn tcp flags != ack tcp flags != syn,ack tcp flags != psh,ack drop
 #		tcp sport 1-65535 accept
