--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -20,12 +20,12 @@ table netdev filter {
 #table arp filter {
 #	chain input {
 #		type filter hook input priority -2147483648; policy drop;
-#		arp operation reply arp saddr ether xx:xx:xx:xx:xx:xx accept
+#		arp saddr ether xx:xx:xx:xx:xx:xx arp saddr ip x.x.x.x accept
 #	}
 
 #	chain output {
 #		type filter hook output priority -2147483648; policy drop;
-#		arp daddr ether { 00:00:00:00:00:00, xx:xx:xx:xx:xx:xx, ff:ff:ff:ff:ff:ff } accept
+#		arp daddr ether { 00:00:00:00:00:00, xx:xx:xx:xx:xx:xx, ff:ff:ff:ff:ff:ff } arp daddr ip x.x.x.x accept
 #	}
 #}
 table ip filter {
