--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -25,7 +25,8 @@ table netdev filter {
 
 #	chain output {
 #		type filter hook output priority -2147483648; policy drop;
-#		arp daddr ether { 00:00:00:00:00:00, xx:xx:xx:xx:xx:xx, ff:ff:ff:ff:ff:ff } arp daddr ip x.x.x.x accept
+#		arp daddr ether { 00:00:00:00:00:00, ff:ff:ff:ff:ff:ff } accept
+#		arp daddr ether xx:xx:xx:xx:xx:xx arp daddr ip x.x.x.x accept
 #	}
 #}
 table ip filter {
