--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -83,6 +83,7 @@ kernel.split_lock_mitigate = 1
 kernel.stack_erasing = 1
 #kernel.unknown_nmi_panic = 1
 kernel.unprivileged_bpf_disabled = 1
+kernel.unprivileged_userns_clone = 0
 kernel.watchdog = 0
 kernel.watchdog_thresh = 0
 kernel.yama.ptrace_scope = 1
