--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -230,7 +230,7 @@ net.ipv4.tcp_notsent_lowat = 2097152
 net.ipv4.tcp_workaround_signed_windows = 0
 net.ipv4.tcp_thin_linear_timeouts = 0
 net.ipv4.tcp_limit_output_bytes = 2097152
-net.ipv4.tcp_challenge_ack_limit = 20
+net.ipv4.tcp_challenge_ack_limit = 999999999
 net.ipv4.tcp_rx_skb_cache = 1
 net.ipv4.tcp_tx_skb_cache = 1
 net.ipv4.udp_mem = 32768 65536 131072
