--- a/etc/iptables/iptables.conf
+++ b/etc/iptables/iptables.conf
@@ -41,7 +41,7 @@ iptables -t raw -A PREROUTING -p tcp --sport 53 -j ACCEPT
 iptables -t raw -A PREROUTING -p tcp --sport 443 -j ACCEPT
 iptables -t raw -A PREROUTING -p udp --sport 53 -j ACCEPT
 iptables -t filter -A INPUT -i lo -j ACCEPT
-iptables -t filter -A INPUT -m state --state ESTABLISHED -j ACCEPT
+iptables -t filter -A INPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
 
 # Save iptables rules
 iptables-save -f /etc/iptables/iptables.rules
