--- a/etc/iptables/iptables.conf
+++ b/etc/iptables/iptables.conf
@@ -37,11 +37,12 @@ iptables -t filter -P INPUT DROP
 # Add iptables rules
 iptables -t raw -A PREROUTING -i lo -j ACCEPT
 iptables -t raw -A PREROUTING -f -j DROP
-iptables -t raw -A PREROUTING -p tcp --sport 53 -j ACCEPT
-iptables -t raw -A PREROUTING -p tcp --sport 443 -j ACCEPT
-iptables -t raw -A PREROUTING -p udp --sport 53 -j ACCEPT
+#iptables -t raw -A PREROUTING -p tcp -m tcp --sport 1:65535 -j ACCEPT
+#iptables -t raw -A PREROUTING -p udp -m udp --sport 1:65535 -j ACCEPT
+iptables -t raw -A PREROUTING -p tcp -m multiport --sports 53,443 -j ACCEPT
+iptables -t raw -A PREROUTING -p udp -m udp --sport 53 -j ACCEPT
 iptables -t filter -A INPUT -i lo -j ACCEPT
-iptables -t filter -A INPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
+iptables -t filter -A INPUT -m conntrack --ctdir REPLY -j ACCEPT
 
 # Save iptables rules
 iptables-save -f /etc/iptables/iptables.rules
