--- a/etc/iptables/iptables.conf
+++ b/etc/iptables/iptables.conf
@@ -9,30 +9,37 @@ iptables -Z
 iptables -t raw -F
 iptables -t raw -X
 iptables -t raw -Z
-iptables -t nat -F
-iptables -t nat -X
-iptables -t nat -Z
 iptables -t mangle -F
 iptables -t mangle -X
 iptables -t mangle -Z
+iptables -t nat -F
+iptables -t nat -X
+iptables -t nat -Z
 iptables -t filter -F
 iptables -t filter -X
 iptables -t filter -Z
+iptables -t security -F
+iptables -t security -X
+iptables -t security -Z
 
 # Add iptables tables
 iptables -t raw -P PREROUTING DROP
 #iptables -t mangle -P PREROUTING DROP
-#iptables -t nat -P PREROUTING DROP
+#iptables -t nat -P PREROUTING ACCEPT
 #iptables -t mangle -P INPUT DROP
+#iptables -t nat -P INPUT ACCEPT
 iptables -t filter -P INPUT DROP
+#iptables -t security -P INPUT DROP
 #iptables -t mangle -P FORWARD DROP
 #iptables -t filter -P FORWARD DROP
+#iptables -t security -P FORWARD DROP
 #iptables -t raw -P OUTPUT DROP
 #iptables -t mangle -P OUTPUT DROP
-#iptables -t nat -P OUTPUT DROP
+#iptables -t nat -P OUTPUT ACCEPT
 #iptables -t filter -P OUTPUT DROP
+#iptables -t security -P OUTPUT DROP
 #iptables -t mangle -P POSTROUTING DROP
-#iptables -t nat -P POSTROUTING DROP
+#iptables -t nat -P POSTROUTING ACCEPT
 
 # Add iptables rules
 iptables -t raw -A PREROUTING -i lo -j ACCEPT
