--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -121,6 +121,7 @@ net.unix.max_dgram_qlen = 500
 
 # Sysctl user options
 # Location:/Documentation/admin-guide/sysctl/user.rst
+user.max_net_namespaces = 0
 user.max_user_namespaces = 0
 
 # Sysctl vm options
