--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -7,7 +7,7 @@ table netdev filter {
 		type filter hook ingress device "NETDEVICE" priority -2147483648; policy drop;
 		arp saddr ether xx:xx:xx:xx:xx:xx arp saddr ip x.x.x.x accept
 		ip frag-off & 8191 != 0 drop
-#		tcp flags != syn tcp flags != ack tcp flags != syn,ack tcp flags != psh,ack drop
+#		tcp flags != ack tcp flags != syn,ack tcp flags != psh,ack drop
 #		tcp sport 1-65535 accept
 #		udp sport 1-65535 accept
 		tcp sport { 53, 443 } accept
