--- a/etc/iptables/iptables.conf
+++ b/etc/iptables/iptables.conf
@@ -43,7 +43,9 @@ iptables -t filter -P INPUT DROP
 
 # Add iptables rules
 iptables -t raw -A PREROUTING -i lo -j ACCEPT
+iptables -t raw -A PREROUTING -m mac ! --mac-source xx:xx:xx:xx:xx:xx -j DROP
 iptables -t raw -A PREROUTING -f -j DROP
+iptables -t raw -A PREROUTING -p tcp --tcp-flags ALL SYN -j DROP
 #iptables -t raw -A PREROUTING -p tcp -m tcp --sport 1:65535 -j ACCEPT
 #iptables -t raw -A PREROUTING -p udp -m udp --sport 1:65535 -j ACCEPT
 iptables -t raw -A PREROUTING -p tcp -m multiport --sports 53,443 -j ACCEPT
