--- a/etc/security/limits.conf
+++ b/etc/security/limits.conf
@@ -60,6 +60,9 @@
 
 # End of file
 
-* - priority 19
-* - nice 0
+* - priority 39
+* - nice -20
 * - rtprio 85
+user - priority 19
+user - nice 0
+user - rtprio 85
