--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -87,6 +87,7 @@ kernel.unprivileged_userns_clone = 0
 kernel.watchdog = 0
 kernel.watchdog_thresh = 0
 kernel.yama.ptrace_scope = 1
+kernel.timer_migration = 0
 
 # Sysctl net core options
 # Location:/Documentation/admin-guide/sysctl/net.rst
