--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -27,13 +27,19 @@ kernel.sched_child_runs_first = 1
 kernel.sched_deadline_period_max_us = 1000000
 kernel.sched_deadline_period_min_us = 1000
 kernel.sched_energy_aware = 0
+kernel.sched_latency_ns = 3000000
+kernel.sched_migration_cost_ns = 25000000
+kernel.sched_min_granularity_ns = 10000000
+kernel.sched_nr_migrate = 250
 kernel.sched_rr_timeslice_ms = 20
 kernel.sched_rt_period_us = 1000000
 kernel.sched_rt_runtime_us = 850000
 kernel.sched_schedstats = 0
+kernel.sched_tunable_scaling = 0
 kernel.sched_util_clamp_max = 1024
 kernel.sched_util_clamp_min = 0
 kernel.sched_util_clamp_min_rt_default = 1024
+kernel.sched_wakeup_granularity_ns = 100000
 
 # Sysctl kernel options
 # Location:/Documentation/admin-guide/sysctl/kernel.rst
