--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -56,6 +56,8 @@ kernel.hung_task_check_count = 5
 kernel.hung_task_timeout_secs = 5
 kernel.hung_task_check_interval_secs = 5
 kernel.hung_task_warnings = 5
+kernel.io_uring_disabled = 2
+kernel.io_uring_group = -1
 kernel.kexec_load_disabled = 1
 kernel.kptr_restrict = 2
 #kernel.modules_disabled = 1
