--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -5,9 +5,9 @@
 table netdev filter {
 	chain ingress {
 		type filter hook ingress device "NETDEVICE" priority -2147483648; policy drop;
-		arp saddr ether xx:xx:xx:xx:xx:xx arp saddr ip x.x.x.x accept
-		ip frag-off & 8191 != 0 drop
-#		tcp flags != ack tcp flags != syn,ack tcp flags != psh,ack drop
+		arp htype 1 arp saddr ether xx:xx:xx:xx:xx:xx arp saddr ip x.x.x.x accept
+		ip frag-off & 0x1fff != 0x0 drop
+#		tcp flags != ack tcp flags != 0x12 tcp flags != 0x18 drop
 #		tcp sport 1-65535 accept
 #		udp sport 1-65535 accept
 		tcp sport { 53, 443 } accept
