--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -37,7 +37,7 @@ table ip filter {
 	chain input {
 		type filter hook input priority -200; policy drop;
 		iif "lo" accept
-		ct direction reply accept
+		ct state established ct direction reply accept
 	}
 
 	chain forward {
