--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -43,7 +43,7 @@ table ip filter {
 	chain forward {
 		type filter hook forward priority -200; policy drop;
 #		iif "eth0" accept
-#		iif "wlan0" ct direction reply accept
+#		iif "wlan0" ct state established ct direction reply accept
 	}
 
 #	chain output {
