--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -42,7 +42,7 @@ table ip filter {
 
 	chain forward {
 		type filter hook forward priority -200; policy drop;
-#		iif "eth0" accept
+#		iif "eth0" ct state { new, established } ct direction original accept
 #		iif "wlan0" ct state established ct direction reply accept
 	}
 
@@ -62,13 +62,54 @@ table ip filter {
 #		type nat hook prerouting priority -199; policy drop;
 #	}
 
+#	chain input {
+#		type nat hook input priority -199; policy drop;
+#	}
+
+#	chain output {
+#		type nat hook output priority -199; policy drop;
+#	}
+
 #	chain postrouting {
 #		type nat hook postrouting priority -199; policy drop;
 #		iif "eth0" masquerade random,fully-random,persistent
 #		iif "wlan0" masquerade random,fully-random,persistent
 #	}
 #}
+#table ip6 nat {
+#	chain prerouting {
+#		type nat hook prerouting priority -199; policy drop;
+#	}
+
+#	chain input {
+#		type nat hook input priority -199; policy drop;
+#	}
+
+#	chain output {
+#		type nat hook output priority -199; policy drop;
+#	}
+
+#	chain postrouting {
+#		type nat hook postrouting priority -199; policy drop;
+#		iif "eth0" masquerade random,fully-random,persistent
+#		iif "wlan0" masquerade random,fully-random,persistent
+#	}
+#}
+#table ip route {
+#	chain output {
+#		type route hook output priority -199; policy drop;
+#	}
+#}
+#table ip6 route {
+#	chain output {
+#		type route hook output priority -199; policy drop;
+#	}
+#}
 #table bridge filter {
+#	chain prerouting {
+#		type filter hook prerouting priority -200; policy drop;
+#	}
+
 #	chain input {
 #		type filter hook input priority -200; policy drop;
 #	}
@@ -79,5 +120,9 @@ table ip filter {
 
 #	chain output {
 #		type filter hook output priority -199; policy drop;
+#	}
+
+#	chain postrouting {
+#		type filter hook postrouting priority -199; policy drop;
 #	}
 #}
