--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -29,7 +29,7 @@ table netdev filter {
 #		arp daddr ether xx:xx:xx:xx:xx:xx arp daddr ip x.x.x.x accept
 #	}
 #}
-table ip filter {
+table inet filter {
 #	chain prerouting {
 #		type filter hook prerouting priority -450; policy drop;
 #	}
@@ -57,7 +57,7 @@ table ip filter {
 #		udp dport 53 accept
 #	}
 }
-#table ip nat {
+#table inet nat {
 #	chain prerouting {
 #		type nat hook prerouting priority -199; policy drop;
 #	}
@@ -76,7 +76,7 @@ table ip filter {
 #		iif "wlan0" masquerade random,fully-random,persistent
 #	}
 #}
-#table ip route {
+#table inet route {
 #	chain output {
 #		type route hook output priority -199; policy drop;
 #	}
