--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -37,13 +37,13 @@ table inet filter {
 	chain input {
 		type filter hook input priority -200; policy drop;
 		iif "lo" accept
-		ct state established ct direction reply accept
+		ct state established ct status seen-reply ct direction reply accept
 	}
 
 	chain forward {
 		type filter hook forward priority -200; policy drop;
 #		iif "eth0" ct state { new, established } ct direction original accept
-#		iif "wlan0" ct state established ct direction reply accept
+#		iif "wlan0" ct state established ct status seen-reply ct direction reply accept
 	}
 
 #	chain output {
