--- a/etc/iptables/iptables.conf
+++ b/etc/iptables/iptables.conf
@@ -51,7 +51,7 @@ iptables -t raw -A PREROUTING -p tcp --tcp-flags ALL SYN -j DROP
 iptables -t raw -A PREROUTING -p tcp -m multiport --sports 53,443 -j ACCEPT
 iptables -t raw -A PREROUTING -p udp -m udp --sport 53 -j ACCEPT
 iptables -t filter -A INPUT -i lo -j ACCEPT
-iptables -t filter -A INPUT -m conntrack --ctstate established --ctdir REPLY -j ACCEPT
+iptables -t filter -A INPUT -m conntrack --ctstate established --ctstatus SEEN_REPLY --ctdir REPLY -j ACCEPT
 
 # Save iptables rules
 iptables-save -f /etc/iptables/iptables.rules
