--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -42,7 +42,7 @@ table inet filter {
 
 	chain forward {
 		type filter hook forward priority -200; policy drop;
-#		iif "eth0" ct state { new, established } ct direction original accept
+#		iif "eth0" ct state { established, new } ct direction original accept
 #		iif "wlan0" ct state established ct status seen-reply ct direction reply accept
 	}
 
