--- a/etc/X11/xorg.conf.d/10-xorg.conf
+++ b/etc/X11/xorg.conf.d/10-xorg.conf
@@ -1,3 +1,6 @@
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 Section "ServerFlags"
 	Option "Debug" " "
 	Option "BlankTime" "0"
