--- a/etc/iptables/iptables.conf
+++ b/etc/iptables/iptables.conf
@@ -1,4 +1,8 @@
 #!/bin/bash
+
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 # iptables rules
 # iptables -L -v to list iptables rules
 
