--- a/etc/security/limits.conf
+++ b/etc/security/limits.conf
@@ -1,4 +1,8 @@
 # /etc/security/limits.conf
+
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 #
 #This file sets the resource limits for the users logged in via PAM.
 #It does not affect resource limits of the system services.
