--- a/etc/systemd/system/changemac.service
+++ b/etc/systemd/system/changemac.service
@@ -1,3 +1,6 @@
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 [Unit]
 Description=Change MAC Systemd Service
 After=network-pre.target
