--- a/etc/systemd/system/settxpower.service
+++ b/etc/systemd/system/settxpower.service
@@ -1,3 +1,6 @@
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 [Unit]
 Description=Set TX power Systemd Service
 After=network-pre.target
