--- a/etc/wpa_supplicant/wpa_supplicant.conf
+++ b/etc/wpa_supplicant/wpa_supplicant.conf
@@ -1,3 +1,6 @@
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 ctrl_interface=/var/run/wpa_supplicant
 update_config=0
 eapol_version=2
