--- a/etc/dhcpcd.conf
+++ b/etc/dhcpcd.conf
@@ -1,3 +1,6 @@
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 # See dhcpcd.conf for details.
 allowinterfaces wl* en* et*
 anonymous
