--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -1,4 +1,8 @@
 #!/sbin/nft -f
+
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 # Use sudo nft flush ruleset to delete the rules (if any).
 # Use sudo nft -f /etc/nftables.conf to load this file.
 
