--- a/etc/resolv.conf
+++ b/etc/resolv.conf
@@ -1,3 +1,6 @@
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 nameserver 127.0.0.1
 search localhost
 options timeout:5 attempts:5 edns0 single-request-reopen no-tld-query
