--- a/home/.asoundrc
+++ b/home/.asoundrc
@@ -1,3 +1,6 @@
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 # Direct Hardware Configuration (No software sample rate conversions)
 #!pcm.!default {
 # type hw
