--- a/home/.inputrc
+++ b/home/.inputrc
@@ -1,3 +1,6 @@
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 $include /etc/inputrc
 set completion-query-items 0
 set disable-completion on
