--- a/home/.jackdrc
+++ b/home/.jackdrc
@@ -1,1 +1,4 @@
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 /usr/bin/jackd -R -T -ch -dalsa -H -M -Xseq -dhw:0 -D -znone -r44100 -p256 -n3
