--- a/home/.xserverrc
+++ b/home/.xserverrc
@@ -1,2 +1,6 @@
 #!/bin/sh
+
+### mrwizardwizard's github ###
+### https://github.com/mrwizardwizard ###
+
 exec /usr/bin/X -quiet -a 0.0 -audit 0 -nopn -nolisten tcp -nolisten inet -nolisten inet6 -nolisten local -tst -dumbSched "$@"
