--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -33,34 +33,6 @@ table netdev filter {
 #		arp daddr ether xx:xx:xx:xx:xx:xx arp daddr ip x.x.x.x accept
 #	}
 #}
-table inet filter {
-#	chain prerouting {
-#		type filter hook prerouting priority -450; policy drop;
-#	}
-
-	chain input {
-		type filter hook input priority -200; policy drop;
-		iif "lo" accept
-		ct state established ct status seen-reply ct direction reply accept
-	}
-
-	chain forward {
-		type filter hook forward priority -200; policy drop;
-#		iif "eth0" ct state { established, new } ct direction original accept
-#		iif "wlan0" ct state established ct status seen-reply ct direction reply accept
-	}
-
-#	chain output {
-#		type filter hook output priority -199; policy drop;
-#	}
-
-#	chain postrouting {
-#		type filter hook postrouting priority -199; policy drop;
-#		oif "lo" accept
-#		tcp dport { 53, 443 } accept
-#		udp dport 53 accept
-#	}
-}
 #table inet nat {
 #	chain prerouting {
 #		type nat hook prerouting priority -199; policy drop;
@@ -85,6 +57,35 @@ table inet filter {
 #		type route hook output priority -199; policy drop;
 #	}
 #}
+table inet filter {
+	chain prerouting {
+		type filter hook prerouting priority -450; policy drop;
+		fib saddr . iif oif != 0 accept
+	}
+
+	chain input {
+		type filter hook input priority -200; policy drop;
+		iif "lo" accept
+		ct state established ct status seen-reply ct direction reply accept
+	}
+
+	chain forward {
+		type filter hook forward priority -200; policy drop;
+#		iif "eth0" ct state { established, new } ct direction original accept
+#		iif "wlan0" ct state established ct status seen-reply ct direction reply accept
+	}
+
+#	chain output {
+#		type filter hook output priority -199; policy drop;
+#	}
+
+#	chain postrouting {
+#		type filter hook postrouting priority -199; policy drop;
+#		oif "lo" accept
+#		tcp dport { 53, 443 } accept
+#		udp dport 53 accept
+#	}
+}
 #table bridge filter {
 #	chain prerouting {
 #		type filter hook prerouting priority -200; policy drop;
