--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -49,8 +49,8 @@ table netdev filter {
 
 #	chain postrouting {
 #		type nat hook postrouting priority -199; policy drop;
-#		iif "eth0" masquerade random,fully-random,persistent
-#		iif "wlan0" masquerade random,fully-random,persistent
+#		oif "eth0" masquerade random,fully-random,persistent
+#		oif "wlan0" masquerade random,fully-random,persistent
 #	}
 #}
 #table inet route {
