--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -169,6 +169,7 @@ net.ipv4.ip_forward = 0
 net.ipv4.ip_no_pmtu_disc = 0
 net.ipv4.route.min_pmtu = 256
 net.ipv4.ip_forward_use_pmtu = 0
+net.ipv4.ip_forward_update_priority = 0
 net.ipv4.route.mtu_expires = 50
 net.ipv4.route.min_adv_mss = 256
 net.ipv4.fib_notify_on_flag_change = 0
@@ -223,7 +224,7 @@ net.ipv4.tcp_comp_sack_delay_ns = 5000000
 net.ipv4.tcp_comp_sack_slack_ns = 5000000
 net.ipv4.tcp_comp_sack_nr = 50
 net.ipv4.tcp_slow_start_after_idle = 0
-net.ipv4.tcp_stdurg = 0
+net.ipv4.tcp_stdurg = 1
 net.ipv4.tcp_synack_retries = 3
 net.ipv4.tcp_syncookies = 0
 net.ipv4.tcp_migrate_req = 0
