--- a/home/.asoundrc
+++ b/home/.asoundrc
@@ -17,6 +17,26 @@ slave.pcm {
 hint.device 0
 }
 
+# jack plugin
+
+#pcm.!default {
+# type plug
+#slave { pcm "jack" }
+#}
+
+#pcm.jack {
+# type jack
+#playback_ports {
+# 0 system:playback_1
+# 1 system:playback_2
+#}
+
+#capture_ports {
+# 0 system:capture_1
+# 1 system:capture_2
+# }
+#}
+
 !ctl.!default {
 	@args [ CARD ]
 	@args.CARD {
