--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -148,6 +148,7 @@ vm.dirty_writeback_centisecs = 0
 vm.extfrag_threshold = 500
 vm.legacy_va_layout = 0
 vm.lowmem_reserve_ratio = 0 0 0
+vm.mem_profiling = 0
 vm.memory_failure_early_kill = 1
 vm.memory_failure_recovery = 0
 vm.min_free_kbytes = 131072
