--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -37,6 +37,7 @@ kernel.sched_nr_migrate = 250
 kernel.sched_rr_timeslice_ms = 20
 kernel.sched_rt_period_us = 1000000
 kernel.sched_rt_runtime_us = 850000
+kernel.task_delayacct = 0
 kernel.sched_schedstats = 0
 kernel.sched_tunable_scaling = 0
 kernel.sched_util_clamp_max = 1024
@@ -92,13 +93,14 @@ kernel.softlockup_panic = 0
 kernel.soft_watchdog = 0
 kernel.split_lock_mitigate = 1
 kernel.stack_erasing = 1
+kernel.sysrq = 0
+kernel.timer_migration = 0
 #kernel.unknown_nmi_panic = 1
 kernel.unprivileged_bpf_disabled = 1
 kernel.unprivileged_userns_clone = 0
 kernel.watchdog = 0
 kernel.watchdog_thresh = 0
 kernel.yama.ptrace_scope = 1
-kernel.timer_migration = 0
 
 # Sysctl net core options
 # Location:/Documentation/admin-guide/sysctl/net.rst
@@ -140,14 +142,17 @@ user.max_user_namespaces = 0
 # Location:/Documentation/admin-guide/sysctl/vm.rst
 vm.block_dump = 0
 vm.compaction_proactiveness = 35
+vm.defrag_mode = 1
 vm.dirty_background_ratio = 25
 vm.dirty_expire_centisecs = 0
 vm.dirty_ratio = 75
 vm.dirtytime_expire_seconds = 10
 vm.dirty_writeback_centisecs = 0
+vm.enable_soft_online = 0
 vm.extfrag_threshold = 500
 vm.legacy_va_layout = 0
 vm.lowmem_reserve_ratio = 0 0 0
+vm.memfd_noexec = 1
 vm.mem_profiling = 0
 vm.memory_failure_early_kill = 1
 vm.memory_failure_recovery = 0
@@ -156,6 +161,7 @@ vm.oom_dump_tasks = 0
 vm.oom_kill_allocating_task = 1
 vm.page-cluster = 0
 vm.panic_on_oom = 2
+vm.stat_interval = 1
 vm.percpu_pagelist_high_fraction = 10000
 vm.numa_stat = 0
 vm.swappiness = 1
