--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -115,18 +115,18 @@ net.core.dev_weight_tx_bias = 1
 net.core.default_qdisc = noqueue
 net.core.busy_read = 500
 net.core.busy_poll = 500
-net.core.rmem_default = 2097152
-net.core.rmem_max = 2097152
+net.core.rmem_default = 4194304
+net.core.rmem_max = 4194304
 net.core.tstamp_allow_data = 0
-net.core.wmem_default = 2097152
-net.core.wmem_max = 2097152
+net.core.wmem_default = 4194304
+net.core.wmem_max = 4194304
 net.core.netdev_budget = 500
 net.core.netdev_budget_usecs = 100000
 # rx_queue_len version of tx_queue_len
 net.core.netdev_max_backlog = 250
 net.core.netdev_tstamp_prequeue = 0
 net.core.netdev_unregister_timeout_secs = 5
-net.core.optmem_max = 2097152
+net.core.optmem_max = 4194304
 net.core.fb_tunnels_only_for_init_net = 1
 net.core.devconf_inherit_init_net = 1
 
@@ -225,7 +225,7 @@ net.ipv4.tcp_retrans_collapse = 0
 net.ipv4.tcp_retries1 = 3
 net.ipv4.tcp_retries2 = 3
 net.ipv4.tcp_rfc1337 = 1
-net.ipv4.tcp_rmem = 2097152 2097152 2097152
+net.ipv4.tcp_rmem = 4194304 4194304 4194304
 net.ipv4.tcp_sack = 0
 net.ipv4.tcp_comp_sack_delay_ns = 5000000
 net.ipv4.tcp_comp_sack_slack_ns = 5000000
@@ -246,17 +246,17 @@ net.ipv4.tcp_pacing_ca_ratio = 120
 net.ipv4.tcp_tso_win_divisor = 5
 net.ipv4.tcp_tw_reuse = 2
 net.ipv4.tcp_window_scaling = 0
-net.ipv4.tcp_wmem = 2097152 2097152 2097152
-net.ipv4.tcp_notsent_lowat = 2097152
+net.ipv4.tcp_wmem = 4194304 4194304 4194304
+net.ipv4.tcp_notsent_lowat = 4194304
 net.ipv4.tcp_workaround_signed_windows = 0
 net.ipv4.tcp_thin_linear_timeouts = 0
-net.ipv4.tcp_limit_output_bytes = 2097152
+net.ipv4.tcp_limit_output_bytes = 4194304
 net.ipv4.tcp_challenge_ack_limit = 999999999
 net.ipv4.tcp_rx_skb_cache = 1
 net.ipv4.tcp_tx_skb_cache = 1
 net.ipv4.udp_mem = 32768 65536 131072
-net.ipv4.udp_rmem_min = 2097152
-net.ipv4.udp_wmem_min = 2097152
+net.ipv4.udp_rmem_min = 4194304
+net.ipv4.udp_wmem_min = 4194304
 net.ipv4.ip_local_port_range = 1024 65535
 net.ipv4.ip_early_demux = 1
 net.ipv4.tcp_early_demux = 1
@@ -360,7 +360,7 @@ net.ipv6.icmp.echo_ignore_anycast = 1
 
 # Sysctl netfilter options
 # Location:/Documentation/networking/nf_conntrack-sysctl.rst
-net.netfilter.nf_conntrack_buckets = 2097152
+net.netfilter.nf_conntrack_buckets = 262144
 net.netfilter.nf_conntrack_events = 0
 net.netfilter.nf_conntrack_frag6_timeout = 10
 net.netfilter.nf_conntrack_generic_timeout = 10
