--- a/etc/sysctl.d/local.conf
+++ b/etc/sysctl.d/local.conf
@@ -157,6 +157,9 @@ vm.mem_profiling = 0
 vm.memory_failure_early_kill = 1
 vm.memory_failure_recovery = 0
 vm.min_free_kbytes = 131072
+vm.mmap_min_addr = 65536
+vm.mmap_rnd_bits = 32
+vm.mmap_rnd_compat_bits = 16
 vm.oom_dump_tasks = 0
 vm.oom_kill_allocating_task = 1
 vm.page-cluster = 0
